--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,14 @@ version = "0.1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 LinearAlgebra = "1.11.0"
+NaNStatistics = "0.6.50"
 Parameters = "0.12.3"
 Printf = "1.11.0"
 Random = "1.11.0"
